<resources>
    <string name="app_name">Task_19</string>
    <string name="normal_toast_with_icon">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast">WARNING TOAST</string>
    <string name="info_toast">INFO TOAST</string>
    <string name="info_toast_with_formatting">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast">ERROR TOAST</string>
    <string name="success_toast">SUCCESS TOAST</string>
    <string name="custom_configuration">CUSTOM CONFIGURATION</string>
    <string name="about_me">Лысенко Макар Константинович БПИ162</string>
</resources>
